--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,10 +1,13 @@
 <div style="display:none;">
     <div id="news" class="popup_portfolio" alt="">
-        <h3>Abstract accepted to CDSA at IIT-Guwahati!
+    {% for item in site.data.news %} 
+        <h3>{{ item.header }}
         </h3>
-        <time datetime="14-09-2017">14/09/2017
+        <time>{{ item.date }}
         </time>
-        <p class="par">Mahashweta Patra's paper - 'Robust chaos in 3D piece-wise linear maps' - has been accepted at the <a target="_blank" href="http://www.iitg.ernet.in/cdsa2017/"><em>Complex Dynamical Systems and Analysis</em></a> conference taking place in IIT-Guwahati in December.
+        <p class="par">{{ item.description }}
         </p>
+    {% endfor %}
     </div>
+    
 </div> 
