--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
             </div>
             <a target="_blank" href="www.iiserkol.ac.in"> </a>
         </div>
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="js/isotope.pkgd.min.js"></script>
         <script src="js/cells-by-row.js"></script>
         <script type="text/javascript" src="js/fancybox/jquery.fancybox.pack.js"></script>
