--- a/_includes/people_box_loop.html
+++ b/_includes/people_box_loop.html
@@ -17,7 +17,7 @@
             <h3 style="color:white"><span style="font-family: KacstBook;"><b><strong>{{ member.name }}</strong></b><br><br></span>
             </h3>
             
-            <span style="font-family: Times New Roman,Times,serif;">{{ member.description }}<br><br></span>
+            <span style="font-family: Times New Roman,Times,serif;text-align: justify;">{{ member.description }}<br><br></span>
             
             {% if member.email!=null %}
                 <span style="font-family: Times New Roman,Times,serif;"><span style="color:white;">Email ID:</span> {{ member.email }}<br><br></span> 
